--- a/src/app/view/listagem/listagem.component.css
+++ b/src/app/view/listagem/listagem.component.css
@@ -90,6 +90,7 @@
 	justify-content: center;
 	align-items: center;
 	margin: 0 auto;
+	background-color: rgba(0, 0, 0, 0);
 }
 
 .bt_detalhe{
@@ -99,6 +100,7 @@
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0); /*retirar cor dos elementos*/
 }
 
 .bt_delete{
@@ -108,6 +110,7 @@
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+	background-color: rgba(0, 0, 0, 0); /*retirar cor dos elementos*/
 }
 
 
