--- a/src/app/view/cadastrar/cadastrar.component.css
+++ b/src/app/view/cadastrar/cadastrar.component.css
@@ -117,6 +117,84 @@
 	font-family: 'Avenir';
 }
 
+/* MODAL */
+
+.modal-container{
+	width: 100%;
+	height: 100%;
+	font-family: 'Avenir';
+	background-color: rgba(0, 0, 0, .5);
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 2000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal{
+	background-color: white;
+	font-family: 'Avenir';
+	width: 30%;
+	height: 20%;
+	min-width: 300px;
+	padding: 40px;
+	border-radius: 3px;
+	position: relative;
+	color: #343224;
+	display: flex;
+}
+
+@keyframes modal {
+	from{
+		opacity: 0;
+		transform: translate3d(0, -60px, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+.mostrar .modal{
+	animation: modal .3s;
+	
+}
+
+.fechar{
+	position: absolute;
+	font-size: 1.2em;
+	top: -30px;
+	right: -30px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border: 4px solid white;
+	background: #988b7a;
+	color: white;
+	font-family: 'Avenir';
+	cursor: pointer;
+	box-shadow: 0 4px 4px 0 (rgba(0, 0, 0, .3));
+	}
+
+
+.subtitulo{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.bt_confirma{
+	width: 60px;
+	height: 60px;
+	margin: 0 auto;
+	justify-content: center;
+	align-items: flex-start;
+
+}
+
 
 
 
