--- a/src/app/view/modal/modal.component.css
+++ b/src/app/view/modal/modal.component.css
@@ -1,23 +1,135 @@
-.modal {
-	background: #fff;
-	border-radius: 8px;
-	box-shadow: 0 2px 8px #333;
-	min-width: 320px;
-	position: fixed;
-	left: 50%;
-	padding: 24px;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 11;
-  }
-
-  .overlay {
-	background: #000;
-	height: 100vh;
-	left: 0;
-	opacity: 0.5;
-	position: fixed;
-	top: 0;
+.modal-container{
 	width: 100vw;
-	z-index: 10;
-  }
+	height: 100vh;
+	font-family: 'Avenir';
+	background-color: rgba(0, 0, 0, .5);
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 2000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal{
+	background-color: white;
+	font-family: 'Avenir';
+	width: 40%;
+	height: 20%;
+	min-width: 300px;
+	padding: 40px;
+	position: relative;
+	color: #343224;
+	display: flex;
+}
+
+@keyframes modal {
+	from{
+		opacity: 0;
+		transform: translate3d(0, -60px, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+.mostrar .modal{
+	animation: modal .3s;
+	
+}
+
+.fechar{
+	position: absolute;
+	font-size: 1.2em;
+	top: -30px;
+	right: -30px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border: 4px solid white;
+	background: #988b7a;
+	color: white;
+	font-family: 'Avenir';
+	cursor: pointer;
+	box-shadow: 0 4px 4px 0 (rgba(0, 0, 0, .3));
+	}
+
+
+.subtitulo{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.bt_confirma{
+	width: 60px;
+	height: 60px;
+	margin: 0 auto;
+	justify-content: center;
+	align-items: flex-start;
+
+}
+
+
+/*FONT*/
+@font-face {
+    font-family: 'Avenir';
+    src: url('../../../assets/AvenirLTStd-Medium.otf') 
+    format('opentype');
+}
+
+
+/*GRID*/
+
+.flex {
+	max-width: 1004px;
+	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap; /* Quebra a linha */
+}
+
+.flex-item-1, .flex-item-2, .flex-item-3, .flex-item-4, .flex-item-5, .flex-item-6, .flex-item-7, .flex-item-8, .flex-item-9, .flex-item-10, .flex-item-11, .flex-item-12 {
+	margin-left: 0px;
+	margin-right: 0px;
+	align-self: flex-stretch; /*alinha os itens ao inicio */
+}
+
+.flex-item-1 {
+	width: calc(8.333% - 20px);
+}
+.flex-item-2 {
+	width: calc(16.666% - 20px);
+}
+.flex-item-3 {
+	width: calc(25% - 20px);
+}
+.flex-item-4 {
+	width: calc(33.333% - 20px);
+}
+.flex-item-5 {
+	width: calc(41.666% - 20px);
+}
+.flex-item-6 {
+	width: calc(50% - 20px);
+}
+.flex-item-7 {
+	width: calc(58.333% - 20px);
+}
+.flex-item-8 {
+	width: calc(66.666% - 20px);
+}
+.flex-item-9 {
+	width: calc(75% - 20px);
+}
+.flex-item-10 {
+	width: calc(83.333% - 20px);
+}
+.flex-item-11 {
+	width: calc(91.666% - 20px);
+}
+.flex-item-12 {
+	width: calc(100% - 20px);
+}
